fix project card subtitle align bug on mobile

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -44,7 +44,7 @@ figure.right {
     position: absolute;
     display: none;
     pointer-events: none;
-    background-image: radial-gradient(circle, rgba(70, 130, 220, 0.5) 0.5px, transparent 0.5px);
+    background-image: radial-gradient(circle, rgba(70, 130, 220, 0.5) 1px, transparent 0.5px);
     background-size: 3px 3px;
     z-index: 10;
 }
