--- a/css/layout.css
+++ b/css/layout.css
@@ -71,10 +71,10 @@
 
 .project-subtitle {
   color: white;
-  text-align: center;
   font-size: 1rem;
   line-height: 1.4;
   margin: 0;
+  text-align: left;
 }
 
 /* Fade in effects for cards*/
